--- a/app/views/devise/shared/_error_messages.html.erb
+++ b/app/views/devise/shared/_error_messages.html.erb
@@ -1,5 +1,5 @@
 <% if resource.errors.any? %>
-  <div class="rounded-lg border border-red-200 bg-red-50 px-4 py-3 text-red-900" role="alert">
+  <div class="bb-alert bb-alert-error" role="alert">
     <ul class="list-disc pl-5">
       <% resource.errors.full_messages.each do |message| %>
         <li><%= message %></li>
