--- a/app/views/shared/_image_list.html.erb
+++ b/app/views/shared/_image_list.html.erb
@@ -8,7 +8,7 @@
     <!-- Pagination at top -->
     <%= render partial: "shared/pagination", locals: { collection: images } %>
 
-    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 justify-items-center">
+    <div class="bb-image-grid">
       <% images.each do |image| %>
         <%= link_to edit_universe_image_url(universe, image), class: "block p-1 transition-all duration-200" do %>
           <%= generate_image_tag(image, [250, 400]) %>
